--- a/locales/kz.json
+++ b/locales/kz.json
@@ -39,8 +39,8 @@
         "send-button": "Жіберу"
     },
     "need-help-modal": {
-        "title": "Шұғыл қызметтердің көмегі қажет (102)?",
-        "description": "Егер сіз төтенше жағдайға тап болсаңыз және құтқарушылардың жедел көмегіне мұқтаж болсаңыз, 102 нөміріне қоңырау шалыңыз.",
+        "title": "Шұғыл қызметтердің көмегі қажет (103)?",
+        "description": "Егер сіз төтенше жағдайға тап болсаңыз және құтқарушылардың жедел көмегіне мұқтаж болсаңыз, 103 нөміріне қоңырау шалыңыз.",
         "call-button": "Шақыру",
         "already-called": "Қазірдің өзінде шақырылды",
         "not-need": "Қажет емес"
@@ -174,7 +174,12 @@
         "search-savers": "Құтқарушыларды іздеу",
         "type-of-incident": "Жазатайым оқиға түрі",
         "geolocation": "Орналасқан жері",
-        "description": "Сипаттама"
+        "description": "Сипаттама",
+        "call-button": "Қоңырау шалу",
+        "send-feedback": "Жауап беру",
+        "feedback-exist": "Сіз қазірдің өзінде жауап бердіңіз",
+        "cancel": "Бас тарту",
+        "map": "Картадан қараңыз"
     },
     "achievments": {
         "golded-star": "Құтқарушының Алтын жұлдызы",
@@ -185,7 +190,8 @@
     "change-language-modal": {
         "title": "Тілді өзгерту",
         "ru": "Орыс тілі",
-        "kz": "Қазақ тілі"
+        "kz": "Қазақ тілі",
+        "eng": "Ағылшын тілі"
     },
     "notification-modal": {
         "title": "Хабарландыру параметрлері",
@@ -242,7 +248,9 @@
         "route-button": "Маршрут жасаңыз"
     },
     "messages": {
-        "data-changed": "Деректер сәтті өзгертілді. Өзгерістерді көру үшін қайта өтіңіз"
+        "data-changed": "Деректер сәтті өзгертілді. Өзгерістерді көру үшін қайта өтіңіз",
+        "feedback-send-title": "Хабар",
+        "feedback-send-subtitle": "Сіз сәтті жауап бердіңіз"
     },
     "change-password": {
         "title": "Құпия сөзді өзгерту",
@@ -255,5 +263,47 @@
         "save-button": "Өзгерту",
         "confirm-failed": "Құпия сөздер бірдей емес",
         "sick-pass": "Жаңа құпия сөз 8 таңбадан жоғары болуы керек"
+    },
+    "warning-modal": {
+        "title": "Ескерту",
+        "subtitle": "Сіздің сертификатыңыз модерацияға жіберілді. Сәтті модерациядан кейін сіз адамдарды құтқара аласыз",
+        "go-back-button": "Үйге оралу"
+    },
+    "language-screen": {
+        "title": "Тілді таңдаңыз!",
+        "subtitle": "Болашақта сіз профиль параметрлерінде тілді өзгерте аласыз",
+        "russian": "Орыс тілі",
+        "kazakh": "Қазақ тілі",
+        "english": "Ағылшын тілі"
+    },
+    "auth-screen": {
+        "title": "Сәлеметсіз бе!",
+        "subtitle": "Жаңа мүмкіндіктер мен ыңғайлылық әлемін ашыңыз.",
+        "phone-title": "Телефон нөмірі",
+        "password-title": "Құпия сөз",
+        "password-placeholder": "Құпия сөзді енгізіңіз",
+        "login-button": "Кіру",
+        "account": "Сізде тіркелгі жоқ па?",
+        "create-button": "Жасау"
+    },
+    "reg-screen": {
+        "eyewitness": "Куәгер",
+        "rescuer": "Құтқарушы",
+        "name": "Аты",
+        "name-placeholder": "Атын енгізіңіз",
+        "surname": "Тегі",
+        "surname-placeholder": "Фамилияны енгізіңіз",
+        "phone-title": "Телефон нөмірі",
+        "email-title": "Email (Міндетті Емес)",
+        "email-placeholder": "Электрондық поштаны енгізіңіз",
+        "agree": "Мен деректерді беруге және өңдеуге келісемін",
+        "next-button": "Келесі",
+        "password": "Құпия сөз",
+        "password-placeholder": "Құпия сөзді енгізіңіз",
+        "confirm-pass": "Құпия сөзді растаңыз",
+        "confirm-pass-placeholder": "Құпия сөзді қайталаңыз",
+        "reg-button": "Тіркелу",
+        "certificate": "Сертификат",
+        "certificate-placeholder": "Сертификатты жүктеп алыңыз"
     }
 }
