--- a/locales/ru.json
+++ b/locales/ru.json
@@ -39,8 +39,8 @@
         "send-button": "Отправить"
     },
     "need-help-modal": {
-        "title": "Необходима помощь экстренных служб (102)?",
-        "description": "Если вы оказались в чрезвычайной ситуации и нуждаетесь в оперативной помощи спасателей, позвоните по номеру 102.",
+        "title": "Необходима помощь экстренных служб (103)?",
+        "description": "Если вы оказались в чрезвычайной ситуации и нуждаетесь в оперативной помощи спасателей, позвоните по номеру 103.",
         "call-button": "Вызвать",
         "already-called": "Уже вызвано",
         "not-need": "Не нужно"
@@ -174,7 +174,14 @@
         "search-savers": "Поиск спасателей",
         "type-of-incident": "Вид несчастного случая",
         "geolocation": "Местоположение",
-        "description": "Описание"
+        "description": "Описание",
+        "call-button": "Позвонить",
+        "send-feedback": "Откликнуться",
+        "feedback-exist": "Вы уже откликнулись",
+        "cancel": "Отказаться",
+        "map": "Посмотреть на карте",
+        "no-incident-title": "У вас пока нет выбранного инцидента",
+        "no-incident-subtitle": "Здесь будет отображаться инцидент, на который Вы откликнулись"
     },
     "achievments": {
         "golded-star": "Золотая звезда спасателя",
@@ -185,7 +192,8 @@
     "change-language-modal": {
         "title": "Смена языка",
         "ru": "Русский язык",
-        "kz": "Қазақ тілі"
+        "kz": "Қазақ тілі",
+        "eng": "English"
     },
     "notification-modal": {
         "title": "Настройки уведомления",
@@ -242,7 +250,9 @@
         "route-button": "Проложить маршрут"
     },
     "messages": {
-        "data-changed": "Данные успешно изменены. Перезайдите, чтоб увидеть изменения"
+        "data-changed": "Данные успешно изменены. Перезайдите, чтоб увидеть изменения",
+        "feedback-send-title": "Сообщение",
+        "feedback-send-subtitle": "Вы успешно откликнулись"
     },
     "change-password": {
         "title": "Смена пароля",
@@ -257,5 +267,61 @@
         "sick-pass": "Новый пароль должен быть свыше 8 символов",
         "invalid-old-password": "Неправильный старый пароль",
         "pass-changed": "Пароль изменён"
+    },
+    "warning-modal": {
+        "title": "Предупреждение",
+        "subtitle": "Ваш сертификат отправлен на модерацию. После успешной модерации Вы сможете спасать людей",
+        "go-back-button": "Вернуться на главную"
+    },
+    "reason-screen": {
+        "placeholder": "Выберите причину",
+        "reason-1": "Недостаток оборудования",
+        "reason-2": "Ложный вызов",
+        "reason-3": "Другие приоритетные вызовы",
+        "reason-4": "Технические неисправности транспорта",
+        "reason-5": "Опасность для спасателей",
+        "reason-6": "Решение руководства",
+        "reason-7": "Завершение инцидента до прибытия",
+        "reason-8": "Проблемы с коммуникацией",
+        "reason-9": "Вмешательство третьих лиц",
+        "reason-10": "Заблокированный доступ к месту происшествия",
+        "finish": "Завершить инцидент"
+    },
+    "language-screen": {
+        "title": "Выберите язык!",
+        "subtitle": "В дальнейшем вы сможете поменять язык в настройках профиля",
+        "russian": "Русский язык",
+        "kazakh": "Қазақ тілі",
+        "english": "English"
+    },
+    "auth-screen": {
+        "title": "Здравствуйте!",
+        "subtitle": "Откройте мир новых возможностей и удобства.",
+        "phone-title": "Номер телефона",
+        "password-title": "Пароль",
+        "password-placeholder": "Введите пароль",
+        "login-button": "Войти",
+        "account": "У вас отсутствует аккаунт?",
+        "create-button": "Создать"
+    },
+    "reg-screen": {
+        "eyewitness": "Очевидец",
+        "rescuer": "Спасатель",
+        "name": "Имя",
+        "name-placeholder": "Введите имя",
+        "surname": "Фамилия",
+        "surname-placeholder": "Введите фамилию",
+        "phone-title": "Номер телефона",
+        "email-title": "Email (Необязательно)",
+        "email-placeholder": "Введите email",
+        "agree": "Я соглашаюсь с передачей и обработкой моих данных",
+        "next-button": "Далее",
+        "password": "Пароль",
+        "password-placeholder": "Введите пароль",
+        "confirm-pass": "Подтвердите пароль",
+        "confirm-pass-placeholder": "Повторите пароль",
+        "reg-button": "Зарегистрироваться",
+        "certificate": "Сертификат",
+        "certificate-placeholder": "Загрузите сертификат"
     }
 }
